--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>
+    <p>
+      Sorry, JavaScript must be enabled to use this app
+    </p>
+  </noscript>
 </body>
 </html>
